--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
           <h1 class="text-center">Blogs</h1>
         </header>
         <div class="blogs-content">
-          <div class="column">
+          <article class="column">
             <div class="card">
               <img src="img/website.jpg" alt="Web Development">
               <div class="blog-body">
@@ -140,8 +140,8 @@
                 </p>
               </div>
             </div>
-          </div>
-          <div class="column">
+          </article>
+          <article class="column">
             <div class="card">
               <img src="img/mentoring.jpg" alt="Mentoring">
               <div class="blog-body">
@@ -156,8 +156,8 @@
                 </p>
               </div>
             </div>
-          </div>
-          <div class="column">
+          </article>
+          <article class="column">
             <div class="card">
               <img src="img/project-planning.jpg" alt="Project">
               <div class="blog-body">
@@ -172,7 +172,7 @@
                 </p>
               </div>
             </div>
-          </div>
+          </article>
         </div>
     </section>
 
