Step 3: video element

--- a/index.html
+++ b/index.html
@@ -127,6 +127,25 @@
           <article class="column">
             <div class="card">
               <figure>
+                <img src="img/html5.png" alt="HTML5">
+              </figure>
+              <div class="blog-body">
+                <h3 class="blog-title">Rise of HTML5, what are the features of HTML5?</h3>
+                <div class="meta">
+                  <span><i class="fas fa-calendar-alt"></i>26th Aug, 2020</span>
+                  <span><i class="fas fa-clock"></i> ~4 mins</span>
+                </div>
+                <p class="blog-text">
+                  HTML5 is a markup language used for structuring and presenting content on
+                  the World Wide Web. It is the fifth and the latest ...
+                  <a href="blogs/html5.html">Read More</a>
+                </p>
+              </div>
+            </div>
+          </article>
+          <article class="column">
+            <div class="card">
+              <figure>
                 <img src="img/website.jpg" alt="Web Development">
                 <figcaption>Image: <a href="https://unsplash.com">Unsplash.com</a></figcaption>
               </figure>
